--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -60,9 +60,9 @@
         <br><br>
         Vous pouvez retirer à tout moment votre consentement auprès de votre maternité, <span class="underline">sans aucune justification</span> de votre part.
         <br><br>
-        <span class="underline">Après la réalisation du recueil</span>, vous pouvez demander la destruction des produits en stock conservés par Lymphobank, aucune justification. 
+        <span class="underline">Après la réalisation du recueil</span>, vous pouvez demander la destruction des produits en stock conservés par Lymphobank, <span class="underline">sans aucune justification</span> de votre part. 
         <br><br>
-        Pour cela, il vous suffit de vous adresser à l’Etablissement Français du Sang Bourgogne/Franche-Comté (EFS-BFC), qui transmettra votre requête à Lymphobank qui vous transmettra alors, via l’EFS-BFC qui transmettra votre requête à Lymphobank. Un certificat de destruction vous sera ensuite remis.
+        Pour cela, il vous suffit de vous adresser à l’Etablissement Français du Sang Bourgogne/Franche-Comté (EFS-BFC), qui transmettra votre requête à Lymphobank qui vous fournira alors, via l’EFS-BFC un certificat de destruction.
         <br><br>
         Compte tenu du processus d’anonymisation, il est inutile d’adresser votre requête directement à Lymphobank qui n’a pas accès à vos données identifiantes et ne pourra donc pas y répondre. 
         <br><br>
