--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -6,6 +6,7 @@
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('scss/about') }}
+    {{ encore_entry_link_tags('scss/schemaTooltip') }}
 {% endblock %}
 
 {% block body %}
