--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -9,6 +9,7 @@
     {{ encore_entry_link_tags('scss/map') }}
     {{ encore_entry_link_tags('scss/carousel') }}
     {{ encore_entry_link_tags('scss/cardActu') }}
+    {{ encore_entry_link_tags('scss/schemaTooltip') }}
     {# leaflet map #}
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
