--- a/assets/styles/cestQuoi.scss
+++ b/assets/styles/cestQuoi.scss
@@ -134,6 +134,9 @@ $kaki: rgb(180, 139, 10);
 
 .prodCordon, .prodSang{
     margin-left: 3em;
+    .tooltipText{
+        font-size: 1em;
+    }
 }
 
 .prodSang{
