--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -147,21 +147,21 @@
         <img id="poche" class="illustrationAccordeon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
         <p>Après que le cordon ombilical ait été coupé, une ponction est réalisée dans la veine du cordon reliée au placenta. Le sang de cordon est utilisé pour produire : 
         <ul class="prodSang">
-            <li>des cellules souches <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+            <li>des cellules souches <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br><br>
             -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
-            <br><br>
+            <br><br><br>
             -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
-            <br><br> 
-            - Plaquettes : elles aident le sang à coaguler</span></span> <span class="tooltip">souches <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+            <br><br><br>
+            - Plaquettes : elles aident le sang à coaguler</span></span> <span class="tooltip">souches <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br><br>
             -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
-            <br><br>
+            <br><br><br>
             -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
-            <br><br> 
-            - Plaquettes : elles aident le sang à coaguler</span></span> <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+            <br><br><br>
+            - Plaquettes : elles aident le sang à coaguler</span></span> <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br><br>
             -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
-            <br><br>
+            <br><br><br>
             -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
-            <br><br> 
+            <br><br><br>
             - Plaquettes : elles aident le sang à coaguler</span></span>. Elles servent par exemple à tester des vaccins ou des biomédicaments (médicaments d’origine biologique) pour le traitement de cancers ou de maladies auto-immunes</li>
 
             <li>des <span class="tooltip">cellules <span class="tooltipText">Les cellules immunitaires sont les globules blancs, ou leucocytes, qui comprennent différentes fractions (lymphocytes, monocytes, polynucléaires), elles-même subdivisées en différentes sous-populations.</span></span> <span class="tooltip">immunitaires <span class="tooltipText">Les cellules immunitaires sont les globules blancs, ou leucocytes, qui comprennent différentes fractions (lymphocytes, monocytes, polynucléaires), elles-même subdivisées en différentes sous-populations.</span></span>, sources de biomédicaments contre le cancer</li>
