--- a/assets/styles/tooltip.scss
+++ b/assets/styles/tooltip.scss
@@ -16,10 +16,10 @@ $kaki: rgb(180, 139, 10);
     font-weight: bold;
     font-size: 0.8em;
     width: 300px;
-    background-color: $pastel;
+    background-color: $pastelHover;
     color: $fond;
     text-align: left;
-    padding: 15px;
+    padding: 20px;
     border-radius: 6px;
     transform: scaleX(0);
     transform-origin: right;
