--- a/assets/styles/schemaTooltip.scss
+++ b/assets/styles/schemaTooltip.scss
@@ -8,10 +8,10 @@ $kaki: rgb(180, 139, 10);
 }
 .tooltipGeant .tooltipGeantText {
     width: 128px;
-    background-color: $pastel;
+    background-color: $pastelHover;
     color: $fond;
     text-align: center;
-    padding: 5px 0;
+    padding: 10px;
     border-radius: 6px;
     transform: scaleY(0);
     /* Position the tooltip text - see examples below! */
