--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -25,17 +25,14 @@
     <br><br>
     -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
     <br><br> 
-    - Plaquettes : elles aident le sang à coaguler</span></span>. C’est la raison pour laquelle il peut être utilisé pour soigner des patients atteints de diverses maladies du sang.</p>
-    <p>Le sang présent dans le cordon ombilical est prélevé par ponction dans la veine ombilicale lorsque l’accouchement est terminé, c’est-à-dire après que le cordon ombilical ait été coupé. 
+    - Plaquettes : elles aident le sang à coaguler</span></span>. C’est la raison pour laquelle il peut être utilisé pour soigner des patients atteints de diverses maladies du sang.
+    <br>
+    Le sang présent dans le cordon ombilical est prélevé par ponction dans la veine ombilicale lorsque l’accouchement est terminé, c’est-à-dire après que le cordon ombilical ait été coupé. 
     Le don de sang placentaire est un <span class="underline">acte indolore, gratuit, anonyme et volontaire</span>.
     </p>
 
-    <p class="ThreeColumnsText">Le sang présent dans le cordon ombilical est prélevé par ponction dans la veine ombilicale lorsque l’accouchement est terminé, c’est-à-dire après que le cordon ombilical ait été coupé. 
-    Le don de sang placentaire est un <span class="underline">acte indolore, gratuit, anonyme et volontaire</span>. 
-    </p>
-
     <h2>Le don du sang de cordon à usage thérapeutique </h2>
-    <div class="illustrated"><img class="illustrationLeft" src={{ asset ('img/therapeutique.PNG')}}><p>La plupart des maternités ne proposent pas de recueillir le sang de cordon : seules certaines maternités, agréées par le Ministère de la Santé, appartiennent au Réseau Français de Sang Placentaire et sont autorisées à prélever le sang de cordon pour un usage thérapeutique. Les dons de sang sont alors centralisés, traités et conservés en France au sein de quatre Banques de Sang Placentaire, dans l’attente de leur administration à un patient.
+    <div class="illustrated"><img class="illustrationLeft" src={{ asset ('img/therapeutique.PNG')}}><p class="TwoColumnsText">La plupart des maternités ne proposent pas de recueillir le sang de cordon : seules certaines maternités, agréées par le Ministère de la Santé, appartiennent au Réseau Français de Sang Placentaire et sont autorisées à prélever le sang de cordon pour un usage thérapeutique. Les dons de sang sont alors centralisés, traités et conservés en France au sein de quatre Banques de Sang Placentaire, dans l’attente de leur administration à un patient.
     <br>
     Cependant, il se peut que le don de sang de cordon soit non conforme pour être greffé à un patient. Il peut alors être réorienté vers un usage scientifique et servir à la recherche.
     <br><br>
@@ -95,7 +92,7 @@
         </div>
     </div>
     <h2>Le don de sang de cordon à usage scientifique</h2>
-    <div class="illustrated"><img class="illustrationLeft" src={{ asset ('img/scientifique.PNG')}}><p>Les maternités partenaires de LYMPHOBANK proposent de prélever le sang de cordon pour un usage scientifique : les besoins de la recherche biomédicale en sang placentaire sont en effet en constante augmentation. Les modalités de don de sang de cordon pour un usage scientifique sont plus simples que pour un don à visée thérapeutique.
+    <div class="illustrated"><img class="illustrationLeft" src={{ asset ('img/scientifique.PNG')}}><p class="TwoColumnsText">Les maternités partenaires de LYMPHOBANK proposent de prélever le sang de cordon pour un usage scientifique : les besoins de la recherche biomédicale en sang placentaire sont en effet en constante augmentation. Les modalités de don de sang de cordon pour un usage scientifique sont plus simples que pour un don à visée thérapeutique.
     <br>
     Donner son sang de cordon, c’est aider la recherche !
     </p></div>
@@ -145,8 +142,10 @@
     <button class="accordion"><p class="accordionTitle">Le sang de cordon</p></button>
         <div class="panel">
         <img id="poche" class="illustrationAccordeon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
-        <p>Après que le cordon ombilical ait été coupé, une ponction est réalisée dans la veine du cordon reliée au placenta. Le sang de cordon est utilisé pour produire : 
-        <ul class="prodSang">
+        <p>Après que le cordon ombilical ait été coupé, une ponction est réalisée dans la veine du cordon reliée au placenta.
+        <br>
+        Le sang de cordon est utilisé pour produire : 
+        <ul class="prodSang TwoColumnsText">
             <li>des cellules souches <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br><br>
             -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
             <br><br><br>
@@ -173,9 +172,11 @@
     <div class="panel">
         <img id="cordon" class="illustrationAccordeon" src={{ asset ('img/icons/cordon.svg')}}>
         <p>
-        Le cordon ombilical est récupéré après avoir prélevé le sang de cordon. Il permet d’isoler :
+        Le cordon ombilical est récupéré après avoir prélevé le sang de cordon.
+        <br>
+        Il permet d’isoler :
         <br><br>
-        <ul class="prodCordon">
+        <ul class="prodCordon TwoColumnsText">
             <li>les <span class="tooltip">cellules <span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span> <span class="tooltip">souches <span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span> <span class="tooltip">mésenchymateuses<span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span>, utilisées pour le développement d’approches innovantes de   <span class="tooltip">thérapie <span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span> <span class="tooltip">cellulaire <span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span> <span class="tooltip">régénératrice. <span class="tooltipText">Utilisation de cellules comme medicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple)</span></span></li>
             <li>les <span class="tooltip">cellules<span class="tooltipText">Cellules qui forment les vaisseaux sanguins.</span></span> <span class="tooltip">endothéliales<span class="tooltipText">Cellules qui forment les vaisseaux sanguins.</span></span>, qui servent de modèle d’étude <span class="latin">in vitro</span> de <span class="tooltip">néoangiogénèse <span class="tooltipText">Processus de création de vaisseaux sanguins impliqués par exemple dans l’alimentation des tumeurs.</span></span>, de cicatrisation ou de remodelage du tissu osseux.</li>
             <li>Le placenta peut éventuellement être recueilli après son expulsion. Il est également une source de <span class="tooltip">cellules <span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span> <span class="tooltip">souches <span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span> <span class="tooltip">mésenchymateuses<span class="tooltipText">Cellules issues de la moelle osseuse qui jouent un rôle dans la production de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span>.</li>        
@@ -242,8 +243,6 @@
             <div class="card-title"><h2>Pathologies adultes :</h2></div>
             <div class="contentCard">
                 <ul>
-                    <li>Maladies Inflammatoires Chroniques de l’Intestin</li>
-                    <li>Lymphome B</li>
                     <li>Leucémie myéloïde</li>
                     <li>Infection HIV</li>
                     <li>Cancer de l'ovaire</li>
@@ -256,8 +255,7 @@
             <div class="card-title"><h2>Pathologies pédiatriques :</h2></div>
             <div class="contentCard">
                 <ul>
-                    <li>Maladies Inflammatoires</li>
-                    <li>Chroniques de l’Intestin (sujets jeunes / ado)</li>
+                    <li>Maladies Inflammatoires chroniques de l’Intestin (sujets jeunes / ado)</li>
                     <li>Lymphome B</li>
                 </ul>
             </div>
