--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -13,7 +13,7 @@
     <h1>Pourquoi donner ?</h1>
     <button class="accordion"><p class="accordionTitle">1.  Sauver des vies</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/Vie.PNG')}}><p class="columnsText">On compte environ <span class="underline">2000 personnes</span> qui, chaque année, ont besoin d’une <span class="tooltip">greffe <span class="tooltipText">La greffe de cellules souches hématopoïétiques issues du sang de cordon ombilical est une alternative à la greffe de moelle osseuse, qui permet de traiter diverses maladies du sang. Il s’agit d’une source différente de cellules souches qui présente les mêmes spécificités et est moins invasive (prélèvement indolore) que le don de moelle osseuse et qui conduit à une meilleure tolérance du receveur, réduisant ainsi le risque d’effets secondaires indésirables.</span></span> de <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
+        <img class="illustrationAccordeon" src={{ asset ('img/Vie.PNG')}}><p class="TwoColumnsText">On compte environ <span class="underline">2000 personnes</span> qui, chaque année, ont besoin d’une <span class="tooltip">greffe <span class="tooltipText">La greffe de cellules souches hématopoïétiques issues du sang de cordon ombilical est une alternative à la greffe de moelle osseuse, qui permet de traiter diverses maladies du sang. Il s’agit d’une source différente de cellules souches qui présente les mêmes spécificités et est moins invasive (prélèvement indolore) que le don de moelle osseuse et qui conduit à une meilleure tolérance du receveur, réduisant ainsi le risque d’effets secondaires indésirables.</span></span> de <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
         -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
         <br><br>
         -  Globules blancs :ils assurent la défense du corps contre les virus et les bactéries
@@ -39,7 +39,7 @@
 
     <button class="accordion"><p class="accordionTitle">2.	Aider la recherche</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/Science.PNG')}}><p class="columnsText">
+        <img class="illustrationAccordeon" src={{ asset ('img/Science.PNG')}}><p class="TwoColumnsText">
         Faire un don de sang de cordon à usage scientifique, <span class="underline">c’est aider la recherche</span>.
         <br><br>
         Le don de sang de cordon à usage scientifique mais aussi de cordon ombilical ou de placenta permet d’isoler diverses cellules qui ne peuvent pas (ou très difficilement) être prélevées sur des donneurs adultes ou qui présentent des caractéristiques uniques, différentes de celles des cellules adultes, ce qui les rend précieuses pour la recherche.
@@ -48,13 +48,13 @@
 
     <button class="accordion"><p class="accordionTitle">3.	Un acte responsable et solidaire</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/Solidarité.PNG')}}><p class="columnsText">L’acte de donner son sang de cordon est un <span class="underline">acte citoyen, généreux, solidaire et important</span> qui peut aider de nombreux patients. Cette expérience riche s’inscrit dans une dynamique de partage tant pour la donneuse que pour les patients. </p>
+        <img class="illustrationAccordeon" src={{ asset ('img/Solidarité.PNG')}}><p class="TwoColumnsText">L’acte de donner son sang de cordon est un <span class="underline">acte citoyen, généreux, solidaire et important</span> qui peut aider de nombreux patients. Cette expérience riche s’inscrit dans une dynamique de partage tant pour la donneuse que pour les patients. </p>
     </div>
 
     <h1>Les principes du don de sang de cordon</h1>
     <div class="bulle">
         <h2>Un acte libre</h2>
-        <p>Vous êtes libre de donner ou non votre sang de cordon.
+        <p class="TwoColumnsText">Vous êtes libre de donner ou non votre sang de cordon.
         <br><br>
         <span class="underline">Avant la réalisation du recueil</span>, votre consentement au prélèvement vous sera demandé, par signature d’un <a href="" target="_blank" rel="noopener noreferrer">document de consentement</a>.
         <br><br>
@@ -79,11 +79,11 @@
         Tel : 03 81 615 675
         </p>
         <h2>Un acte anonyme</h2>
-        <p>Le recueil est anonymisé par la Banque de Sang Placentaire de l’Etablissement Français du Sang Bourgogne/Franche-Comté avant d’être cédé à Lymphobank. Ainsi, Lymphobank n’a en aucun cas accès aux données identifiantes vous concernant ou concernant votre enfant.</p>
+        <p class="TwoColumnsText">Le recueil est anonymisé par la Banque de Sang Placentaire de l’Etablissement Français du Sang Bourgogne/Franche-Comté avant d’être cédé à Lymphobank. Ainsi, Lymphobank n’a en aucun cas accès aux données identifiantes vous concernant ou concernant votre enfant.</p>
         <h2>Un acte volontaire et gratuit </h2>
-        <p>Le don de sang de cordon est volontaire : aucune indemnité ni compensation n’est versée à la maman. Il est également gratuit : aucun frais lié au prélèvement du sang de cordon ou au recueil du cordon ombilical ou du placenta ne sera à la charge de la mère.</p>
+        <p class="TwoColumnsText">Le don de sang de cordon est volontaire : aucune indemnité ni compensation n’est versée à la maman. Il est également gratuit : aucun frais lié au prélèvement du sang de cordon ou au recueil du cordon ombilical ou du placenta ne sera à la charge de la mère.</p>
         <h2>Un acte éthique</h2>
-        <p>Conformément à notre <a href={{ asset ('EngagementLymphobank-2018-09-18.pdf')}} target="_blank" rel="noopener noreferrer">Charte d’engagement</a>, les bénéfices liés à la vente de produits issus de votre don seront totalement réinvestis dans le projet de recherche mené par Lymphobank et sans aucun profit personnel tel que versement de dividendes au fondateur, associés, investisseurs ou partenaires financiers de la société Lymphobank. 
+        <p class="TwoColumnsText">Conformément à notre <a href={{ asset ('EngagementLymphobank-2018-09-18.pdf')}} target="_blank" rel="noopener noreferrer">Charte d’engagement</a>, les bénéfices liés à la vente de produits issus de votre don seront totalement réinvestis dans le projet de recherche mené par Lymphobank et sans aucun profit personnel tel que versement de dividendes au fondateur, associés, investisseurs ou partenaires financiers de la société Lymphobank. 
         <br><br>
         Respectueux de votre don, nous exerçons notre activité en toute transparence et sous le contrôle d’un Comité de Surveillance, constitué pour partie du Directeur de l’EFS-BFC, du Président de la Fédération Fran-çaise pour le Don de Sang Bénévole, d’un représentant de votre maternité disposant tous d’un accès aux résultats comptables et financiers de la société et pour validation du respect de nos engagements.
         <br><br>
