--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,11 +23,11 @@
             <input id="NavToggle" type="checkbox">
             <div class="header"></div>
             <nav class="navbar">
-            <div class="network">
-            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in fa-2x"></i></i></a>
-            
+            <div class="HeaderTopRight">
+                <a href="" target="_blank" rel="noopener noreferrer">Formulaire de consentement</a>
+                <br>
+                <a href="" target="_blank" rel="noopener noreferrer">Lettre d’information</a>
+                
             </div>
             <a href="/" id="logo"><img src={{asset ('img/baby-boy.png')}}></a>
             <h1 class="nom headerText">mon-cordon-precieux.fr</h1>
