--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -15,21 +15,21 @@
     <div class="bulle"><h2>Avant l’accouchement</h2></div>
     <div class="reseau">
         <div id="deroullantMaternité">
-            <button class="accordion"><p class="accordionTitle">1.	Maternités partenaire de notre réseau</p></button>
+            <button class="accordion"><p class="accordionTitle">1.	Maternités partenaires de notre réseau</p></button>
             <div class="panel">
-                <p>Adressez-vous à l’une des maternités partenaire de notre réseau, vous serez mise en relation avec une sage-femme qui pourra répondre à toutes vos questions et préoccupations, à l’occasion de l’un des rendez-vous de suivi de votre grossesse.</p>  
+                <p class="TwoColumnsText">Adressez-vous à l’une des maternités partenaire de notre réseau, vous serez mise en relation avec une sage-femme qui pourra répondre à toutes vos questions et préoccupations, à l’occasion de l’un des rendez-vous de suivi de votre grossesse.</p>  
             </div>
         </div>
         <a href="/Ou" target="_blank" rel="noopener noreferrer"><button id="reseau">Découvrir notre Réseau</button></a>
     </div>
     <button id="btn2" class="accordion"><p class="accordionTitle">2.	Documents fournis lors du RDV <br> à la maternité</p></button>
     <div class="panel">
-        <p>Lors d’un rendez-vous à votre maternité, votre sage-femme vous remettra une <a href="" target="_blank" rel="noopener noreferrer">lettre d’information</a>, ainsi qu’un <a href="" target="_blank" rel="noopener noreferrer">formulaire de consentement</a>, fourni en trois exemplaires et répondra à toutes vos questions.
+        <p class="TwoColumnsText">Lors d’un rendez-vous à votre maternité, votre sage-femme vous remettra une <a href="" target="_blank" rel="noopener noreferrer">lettre d’information</a>, ainsi qu’un <a href="" target="_blank" rel="noopener noreferrer">formulaire de consentement</a>, fourni en trois exemplaires et répondra à toutes vos questions.
         </p>
     </div>
     <button class="accordion"><p class="accordionTitle">3.	Documents signés et complétés</p></button>
     <div class="panel">
-        <p>Lors de votre accouchement, vous devrez apporter les trois exemplaires du formulaire de consentement, préalablement signés et complétés.  
+        <p class="TwoColumnsText">Lors de votre accouchement, vous devrez apporter les trois exemplaires du formulaire de consentement, préalablement signés et complétés.  
         Dans le cas où ceux-ci seraient oubliés ou perdus de votre part, un nouveau consentement vous sera remis.
         </p>
     </div>
