--- a/templates/admin/faqs/ShowFaq.html.twig
+++ b/templates/admin/faqs/ShowFaq.html.twig
@@ -37,7 +37,7 @@
                             {{faq.NomLien}}
                         </th>
                         <td>
-                            <a href={{ path ('edit_faq', {id: faq.id})}} type="button" class="btn btn-warning"><i class="fas fa-cog"></i></a>
+                            <a href={{ path ('edit_faq', {id: faq.id, ordre: faq.ordre})}} type="button" class="btn btn-warning"><i class="fas fa-cog"></i></a>
                         </td>
                         <td>
                             <!-- Boutton modal delete-->
